--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -5,17 +5,19 @@
   <table class="table table-hover">
   <thead>
     <tr>
-      <td>#</td>
-      <td>Title</td>
-      <td>Description</td>
-    </tr>
+    <td>#</td>
+    <td>Title</td>
+    <td>Description</td>
+    <td>Creator </td>
+  </tr>
   </thead>
   <tbody>
     <% @groups.each do |group| %>
     <tr>
-      <td>#</td>
-      <td><%= link_to(group.title, group_path(group)) %></td>
-      <td><%= group.description %></td>
+     <td>#</td>
+     <td><%= link_to(group.title, group_path(group)) %></td>
+     <td><%= group.description %></td>
+     <td> <%= group.user.email %> </td>
       <td>
         <%= link_to("Edit", edit_group_path(group), class: "btn btn-sm btn-default")%>
         <%= link_to("Delete", group_path(group), class: "btn btn-sm btn-default",
